--- a/style/layout.css
+++ b/style/layout.css
@@ -1,11 +1,17 @@
 #app {
-  display: grid;
-  grid-template-columns: 51.25% 48.75%;
-  overflow: hidden;
+  /* display: grid; */
+  /* grid-template-columns: 51.25% 48.75%; */
+  /* overflow: hidden; */
+  /* height: 100vh; */
+  /* justify-content: center; */
+  /* max-width: 1280px; */
+  /* width: 100%; */
+  /* margin-inline: auto; */
+  /* gap: 1.25rem; */
+
+  display: flex;
   height: 100vh;
   justify-content: center;
-  max-width: 1280px;
-  width: 100%;
   margin-inline: auto;
   gap: 1.25rem;
 }
@@ -54,7 +60,7 @@ main {
   background-color: var(--shape-body);
   margin: 1.25rem 1.25rem 1.25rem 0;
   border-radius: .75rem;
-  /* max-width: 51.25rem; */
+  width: 51.25rem;
 
   & label {
     color: var(--text-body);
